# vocal-note-taker

./: package.json
.github/workflows/: release.yml
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-09.md
_bmad-output/implementation-artifacts/: 1-1-initialisation-projet-tauri-structure-modulaire.md  1-2-systeme-centralise-gestion-erreurs.md  1-3-interface-utilisateur-minimale-version.md  1-4-build-packaging-deb-ubuntu.md  1-5-fermeture-propre-application.md  2-1-capture-audio-microphone-systeme.md  2-2-bouton-enregistrement-indicateur-rec.md  2-3-timer-enregistrement-temps-reel.md  2-4-visualisation-waveform-temps-reel.md  2-5-raccourci-clavier-global-enregistrement.md  3-1-integration-whisper-rs-chargement-modele.md  3-2-transcription-asynchrone-progression.md  3-3-gestion-erreurs-transcription.md  3-4-nettoyage-automatique-fichiers-temporaires.md  4-1-affichage-texte-transcrit.md  4-2-copie-presse-papiers-confirmation.md  4-3-raccourci-enter-copier-auto-focus.md  4-4-workflow-lineaire-reinitialisation.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  (+2 more)
scripts/: download-models.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: vocal-note-taker.desktop
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs
src-tauri/src/config/: loader.rs  mod.rs
src-tauri/src/system/: clipboard.rs  hotkeys.rs  mod.rs  shutdown.rs
src-tauri/src/transcription/: mod.rs  whisper.rs
(+18 files in other folders)
