[package]
name = "vocal-note-taker"
version = "0.1.0"
description = "A Tauri App for voice-to-text transcription"
authors = ["Tamles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vocal_note_taker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
toml = "0.8"
dirs = "5.0"

# INTERDIT - Dépendances réseau (NFR-SEC-1)
# NE PAS AJOUTER: reqwest, hyper, tokio/net features

[profile.release]
opt-level = "z"     # Optimiser pour la taille (plutôt que "3" pour vitesse)
lto = true          # Link-Time Optimization - réduit taille, améliore perf
strip = true        # Supprimer symboles de debug du binaire
codegen-units = 1   # Compilation single-threaded pour optimisation maximale
panic = "abort"     # Réduire taille en supprimant unwinding code
